<resources>
    <string name="app_name">MeetnLunch</string>
    <string name="title_activity_search">Map</string>
    <string name="title_activity_login">MeetnLunch</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="name_field">Name</string>
    <string name="confirm_field">Confirm Password</string>
    <string name="age_field">Age</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_none">Both</string>
    <string name="distance_field">Range (km)</string>
    <string name="food_type_field">Type of Food</string>
    <string name="gender_field">Gender</string>
    <string name="visibility_filter">Only visible for:</string>
    <string name="avatar">Profile picture</string>
    <string name="event_creation">Search</string>
    <string name="show_name_info">Show Name</string>
    <string name="show_gender_info">Show Gender</string>
    <string name="show_age_info">Show Age</string>
    <string name="Description_info">Description</string>
    <string name="contact_info">Contact Information</string>
    <string name="token">Token</string>

    <string name="age_min">18</string>
    <string name="age_max">99+</string>
    <string name="distance_min">1</string>
    <string name="distance_max">10</string>
    <string name="right"> NEXT </string>
    <string name="left"> BACK </string>
    <string name="description_image">Profile picture</string>
    <string name="Deconnexion">Deconnexion</string>

    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_up">Register</string>
    <string name="action_send">Send Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_back">Back</string>
    <string name="action_menu_profile">Profile</string>
    <string name="action_menu_search">Search</string>
    <string name="action_menu_filter">Filters</string>
    <string name="action_forgot_password">Forgot Password ?</string>
    <string name="action_save_changes">Save</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="confirm_password">Password and Confirm does not match</string>
    <string name="register_success">Registration Complete !</string>
    <string name="register_fail">Registration Fail !</string>
    <string name="username_NOEXIST">No such user exist !</string>
    <string name="username_EXIT">Email sent !</string>
    <string name="code_INVALID">Code Invalid !</string>
    <string name="code_VALID">Code Accepted !</string>
    <string name="password_FAIL">Something went wrong..! </string>
    <string name="password_RESET">Password successfuly updated !</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_forgot">"Have you forgot your password ? "</string>
    <string name="title_activity_filter">Filter</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="api_url">https://meetnlunchapp.herokuapp.com/api/</string>
</resources>
