<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.herokuapp.meetnlunch.meetnlunch.Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="287dp"
        android:layout_weight="0.10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_menu_profile"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="36sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar"
                android:layout_gravity="center_horizontal"/>
            <ImageView
                android:id="@+id/avatar_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_action_profile"
                android:layout_weight="0.18" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_creation"
                android:layout_gravity="center_horizontal"/>

            <Switch
                android:id="@+id/event_on"
                android:layout_width="200dp"
                android:layout_marginBottom="20dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_name_info"
                android:layout_gravity="center_horizontal"/>
            <Switch
                android:id="@+id/show_name"
                android:layout_width="200dp"
                android:layout_marginBottom="20dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_gender_info"
                android:layout_gravity="center_horizontal"/>
            <Switch
                android:id="@+id/show_gender"
                android:layout_width="200dp"
                android:layout_marginBottom="20dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_age_info"
                android:layout_gravity="center_horizontal"/>

            <Switch
                android:id="@+id/show_age"
                android:layout_width="200dp"
                android:layout_marginBottom="20dp"
                android:layout_height="match_parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description_info"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/description_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_info"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/contact_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/save_change_button"
                style="?android:textAppearanceSmall"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/action_save_changes"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
