<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.herokuapp.meetnlunch.meetnlunch.Filter">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_menu_filter"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="36sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_field"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_min"/>

                <SeekBar
                    android:id="@+id/filter_age"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:max="99"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_max"/>

            </LinearLayout>

            <TextView
                android:id="@+id/age_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_type_field"
                android:layout_gravity="center_horizontal"/>
            <Spinner
                android:id="@+id/filter_food"
                android:layout_width="200dp"
                android:layout_marginBottom="20dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:entries="@array/foodType"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_field"
                android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_min"/>

        <SeekBar
                android:id="@+id/filter_range"
                android:layout_width="200dp"
                android:layout_marginBottom="5dp"
                android:max="10"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_max"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/range_value"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_field"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioGroup
                    android:id="@+id/gender_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male_gender_filter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/gender_male" />

                    <RadioButton
                        android:id="@+id/female_gender_filter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/gender_female" />

                    <RadioButton
                        android:id="@+id/both_gender_filter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_none" />

                </RadioGroup>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility_filter"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="36sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_field"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_min"/>

                <SeekBar
                    android:id="@+id/filter_age_visibility"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:max="99"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_max"/>

            </LinearLayout>

            <TextView
                android:id="@+id/age_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_field"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                    <RadioGroup
                        android:id="@+id/gender_visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/male_gender_visibility"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="@string/gender_male" />

                        <RadioButton
                            android:id="@+id/female_gender_visibility"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="@string/gender_female" />

                        <RadioButton
                            android:id="@+id/both_gender_visibility"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gender_none" />

                     </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/save_change_button"
                style="?android:textAppearanceSmall"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/action_save_changes"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
