<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.herokuapp.meetnlunch.meetnlunch.Forgot">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="337dp"
        android:layout_height="287dp"
        android:layout_weight="0.54">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="MeetnLunch"
                android:textSize="30dp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:src="@drawable/logo"/>

            <TextView
                android:id="@+id/RESPONSE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/holo_red_light"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/user_text_layout"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/user_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/send_mail_button"
                style="?android:textAppearanceSmall"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/action_send"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/token_text_layout"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/code_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/token"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:visibility="gone"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/check_code_button"
                style="?android:textAppearanceSmall"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/action_send"
                android:visibility="gone"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/pass_text_layout"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/prompt_password"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:visibility="gone"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/set_new_pass"
                style="?android:textAppearanceSmall"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/action_send"
                android:visibility="gone"
                android:textStyle="bold" />

            <Button
                android:id="@+id/back_button"
                style="?android:textAppearanceSmall"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:text="@string/action_back"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
